--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Personal Portfolio of [Your Name]">
-    <title>[Your Name] - Portfolio</title>
+    <meta name="description" content="Chandrika's Personal Portfolio">
+    <title>Chandrika's Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -23,8 +24,8 @@
     <!-- About Section -->
     <section id="about">
         <div class="container">
-            <h1>Hello, I'm [Your Name]</h1>
-            <p>I'm a [Your Profession/Field], passionate about [describe your passions]. I specialize in [describe your specialty].</p>
+            <h1>Hi, I'm Chandrika</h1>
+            <p>I'm a passionate developer with expertise in front-end and back-end technologies. I love solving problems and building intuitive user experiences.</p>
         </div>
     </section>
 
@@ -33,52 +34,5 @@
         <div class="container">
             <h2>Skills</h2>
             <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>Python</li>
-                <li>React</li>
-                <li>Node.js</li>
-            </ul>
-        </div>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects">
-        <div class="container">
-            <h2>Projects</h2>
-            <div class="project-card">
-                <h3>Project 1: [Project Name]</h3>
-                <p>Short description of the project.</p>
-                <a href="https://github.com/yourproject" target="_blank">View Project</a>
-            </div>
-            <div class="project-card">
-                <h3>Project 2: [Project Name]</h3>
-                <p>Short description of the project.</p>
-                <a href="https://github.com/yourproject" target="_blank">View Project</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact">
-        <div class="container">
-            <h2>Contact Me</h2>
-            <p>Feel free to reach out to me via email or social media.</p>
-            <ul>
-                <li>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">Your LinkedIn</a></li>
-                <li>GitHub: <a href="https://github.com/yourprofile" target="_blank">Your GitHub</a></li>
-            </ul>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 [Your Name]. All Rights Reserved.</p>
-        </div>
-    </footer>
-
-</body>
-</html>
+                <li>HTML5 & CSS3</li>
+                <li>J
